--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 					I am primarly focused on web development with Javascript, MEAN and MERN stack.
 					<br>
 					I have been working as a <strong>fullstack developer</strong> for past 4 years. <br><br>
-					I have worked in multiple ReactJs⚛️ NodeJs and TypeScript projects across various domains like
+					I have worked in multiple ReactJS, NodeJS and TypeScript projects across various domains like
 					healthcare, ed-tech and fintech, etc.
 					<br><br>
 					Besides programming, I enjoy trekking, sketching, photography and reading tech blogs. I find staying
