--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 								class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
 						<li><a target="_blank" href="https://www.instagram.com/aishstha/"
 								class="icon fa-instagram"><span class="label">LinkedIn</span></a></li>
-						<li><a target="_blank" href="https://aishwaryashrestha232.medium.com/"
+						<li><a target="_blank" href="https://aishwaryashrestha232.medium.com/feature-flag-for-production-deploy-9ef985946c77"
 								class="icon fa-medium"><span class="label">LinkedIn</span></a></li>
 
 						<!-- <li><a href="https://aishsta.github.io/Resume.pdf" class="icon fa-file"><span class="label">Resume</span></a></li> -->
@@ -70,7 +70,7 @@
 					<li><a href="#work">Experience</a></li>
 					<!-- <li><a href="#projects">Projects</a></li> -->
 					<li><a href="#awards">Awards</a></li>
-					<!-- <li><a href="https://aishwaryashrestha232.medium.com/" target="_blank">Blogs</a></li> -->
+					<!-- <li><a href="https://aishwaryashrestha232.medium.com/feature-flag-for-production-deploy-9ef985946c77" target="_blank">Blogs</a></li> -->
 					<li><a href="#contact">Contact</a></li>
 					<li><a href="#recommendations">Recommendations</a></li>
 					<!-- <li><a href="#elements">Elements</a></li> -->
