--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 			<div class="content">
 				<div class="inner">
 					<h1>AISHWARYA SHRESTHA</h1>
-					<p>SENIOR FULLSTACK DEVELOPER</p>
+					<p>FULLSTACK DEVELOPER</p>
 					<ul class="icons">
 						<!--Social Links-->
 						<li><a target="_blank" href="https://github.com/aishstha" class="icon fa-github"><span
