--- a/index.html
+++ b/index.html
@@ -98,8 +98,9 @@
 					I have worked in multiple ReactJS, NodeJS and TypeScript projects across various domains like
 					healthcare, ed-tech and fintech, etc.
 					<br><br>
-					Besides programming, I enjoy trekking, sketching, photography and reading tech blogs. I find staying
-					up to date with tech is fun and useful.
+					Besides programming, I enjoy trekking, sketching, photography and reading tech blogs. 
+					<!--I find staying
+					up to date with tech is fun and useful. -->
 					<br><br>
 					I always look forward to learning new things, working with new people and the opportunity to grow
 					with the emerging technologies and ideas.
