--- a/index.html
+++ b/index.html
@@ -90,11 +90,11 @@
 									Bachelors of Science in Computer Science and Information Technology, 2017</br>
 									<a target="_blank" href="https://en.wikipedia.org/wiki/Tribhuvan_University#:~:text=employees%20is%2015%2C254.-,Rankings,300%20best%20universities%20of%20Asia./">Tribhuvan University</a> </br> -->
 					<br>
-					Hi👋
-					<br>I am <strong>Aishwarya Shrestha</strong> from Kathmandu, Nepal🇳🇵<br>
-					I am primarly focused on web development with Javascript, MEAN and MERN stack.
-					<br>
-					I have been working as a <strong>fullstack developer</strong> for past 4 years. <br><br>
+					Hi,
+					<br>I am <strong>Aishwarya Shrestha</strong> from Nepal🇳🇵, currently located at US🇺🇸 <br><br>
+					I am doing my Master's in Computer Science at University of Wisconsin. My work is primarly focused on machine learning and fullstack development with Javascript, MEAN and MERN stack.
+					<br><br>
+					I have been working as a <strong> developer</strong> for past 5 years. <br><br>
 					I have worked in multiple ReactJS, NodeJS and TypeScript projects across various domains like
 					healthcare, ed-tech and fintech, etc.
 					<br><br>
