--- a/index.html
+++ b/index.html
@@ -100,10 +100,10 @@
 					<br><br>
 					Besides programming, I enjoy trekking, sketching, photography and reading tech blogs. 
 					<!--I find staying
-					up to date with tech is fun and useful. -->
+					up to date with tech is fun and useful. 
 					<br><br>
 					I always look forward to learning new things, working with new people and the opportunity to grow
-					with the emerging technologies and ideas.
+					with the emerging technologies and ideas.-->
 
 					<!-- <a target="_blank" href="https://edusanjal.com/course/bsc-computer-science-and-information-technology-bsc-csit-tribhuvan-university/" class="image main">Coursework</a>
 									<span>Data Structure and Algorithms</span>
