--- a/index.html
+++ b/index.html
@@ -90,15 +90,29 @@
 									Bachelors of Science in Computer Science and Information Technology, 2017</br>
 									<a target="_blank" href="https://en.wikipedia.org/wiki/Tribhuvan_University#:~:text=employees%20is%2015%2C254.-,Rankings,300%20best%20universities%20of%20Asia./">Tribhuvan University</a> </br> -->
 					<br>
-					Hi,
-					<br>I am <strong>Aishwarya Shrestha</strong> from Nepal🇳🇵, currently located at US🇺🇸 <br><br>
+
+					Greetings! I am Aishwarya Shrestha, originally from Nepal🇳🇵, and presently residing in the Wisconsin, United States🇺🇸
+
+                    <br> I am Aishwarya Shrestha from Nepal🇳🇵, currently located in the United States🇺🇸. I hold a Master's in Computer Science from University of Wisconsin-Milwaukee,
+					 where my academic journey provided me with invaluable skills for the Deep Learning and Computer Vision fields.
+
+					<br><br>
+
+					Before pursuing my Master's degree, I had the privilege of accumulating over 5 years of experience as a developer, with a primary emphasis on full-stack development, where I extensively utilized JavaScript and demonstrated proficiency in MERN stacks.
+					<br><br>
+					In my career, I've worked on diverse projects in healthcare, ed-tech, fintech, and more. This has enhanced my proficiency in ReactJS, NodeJS, TypeScript, and equipped me to handle complex challenges.					
+					<!-- During this time, I've been involved in numerous projects utilizing ReactJS, NodeJS, and TypeScript, spanning diverse domains such as healthcare, ed-tech, and fintech. -->
+					<!-- where I honed my skills and developed a passion for Deep Learning / Computer Vision. </br>
 					I am doing my Master's in Computer Science at University of Wisconsin. My work is primarly focused on machine learning and fullstack development with Javascript, MEAN and MERN stack.
 					<br><br>
 					I have been working as a <strong> developer</strong> for past 5 years. <br><br>
 					I have worked in multiple ReactJS, NodeJS and TypeScript projects across various domains like
-					healthcare, ed-tech and fintech, etc.
+					healthcare, ed-tech and fintech, etc. -->
 					<br><br>
-					Besides programming, I enjoy trekking, sketching, photography and reading tech blogs. 
+					Feel free to explore my portfolio to gain deeper insights into my work and the competencies I bring to the table.
+					<br><br>
+
+					<!-- Besides programming, I enjoy trekking, sketching, photography and reading tech blogs.  -->
 					<!--I find staying
 					up to date with tech is fun and useful. 
 					<br><br>
