--- a/index.html
+++ b/index.html
@@ -92,15 +92,17 @@
 					<br>
 
 					Greetings! I am Aishwarya Shrestha, originally from Nepal🇳🇵, and presently residing in the Wisconsin, United States🇺🇸
-
-                    <br> I am Aishwarya Shrestha from Nepal🇳🇵, currently located in the United States🇺🇸. I hold a Master's in Computer Science from University of Wisconsin-Milwaukee,
-					 where my academic journey provided me with invaluable skills for the Deep Learning and Computer Vision fields.
-
+					<br></br>
+                    <!-- <br> I am Aishwarya Shrestha from Nepal🇳🇵, currently located in the United States🇺🇸. I hold a Master's in Computer Science from University of Wisconsin-Milwaukee, -->
+					My academic journey allowed me to develop skills in the fields of Deep Learning and Computer Vision.
+					Based on this work, I am scheduled to present my project funded by NASA at the BMSE Annual Conference in 2023, Oct 13th.
+					<br><br>
 					<br><br>
 
-					Before pursuing my Master's degree, I had the privilege of accumulating over 5 years of experience as a developer, with a primary emphasis on full-stack development, where I extensively utilized JavaScript and demonstrated proficiency in MERN stacks.
+					Before pursuing my Master's degree, I worked over 5 years of experience as a developer, with a concentration on full-stack development, where I extensively utilized JavaScript and demonstrated proficiency in MERN stacks.
 					<br><br>
-					In my career, I've worked on diverse projects in healthcare, ed-tech, fintech, and more. This has enhanced my proficiency in ReactJS, NodeJS, TypeScript, and equipped me to handle complex challenges.					
+					
+					I've worked on diverse projects in healthcare, ed-tech, fintech, and more. This has enhanced my proficiency in ReactJS, NodeJS, TypeScript, and equipped me to handle complex challenges.					
 					<!-- During this time, I've been involved in numerous projects utilizing ReactJS, NodeJS, and TypeScript, spanning diverse domains such as healthcare, ed-tech, and fintech. -->
 					<!-- where I honed my skills and developed a passion for Deep Learning / Computer Vision. </br>
 					I am doing my Master's in Computer Science at University of Wisconsin. My work is primarly focused on machine learning and fullstack development with Javascript, MEAN and MERN stack.
@@ -146,6 +148,11 @@
 			<!-- Work -->
 			<article id="work">
 				<h2 class="major">Work Experience</h2>
+
+				<span class="image mainsub"><img src="images/fusemachines-og.jpg" alt="" /></span>
+				<h3><a href="https://fusemachines.com//">Fusemachines Inc.</a></h3>
+				<!-- <h3>Senior Software Developer</h3> -->
+				<p>Senior Software Engineer<br> Nov 2019 - Present</p><br>
 
 				<span class="image mainsub"><img src="images/fusemachines-og.jpg" alt="" /></span>
 				<h3><a href="https://fusemachines.com//">Fusemachines Inc.</a></h3>
