Revise introduction section in index.html
Updated introduction text to separate educational background from personal information.

--- a/index.html
+++ b/index.html
@@ -81,13 +81,13 @@
 				<span class="image main"><img src="images/me2.jpg" alt="introduction" /></span>
 				<p>
 					<br>
-					Hi! I’m Aishwarya, but I go by Ash. I’m based in Wisconsin, USA, and I hold a Master’s degree in Computer Science. Through my academic journey, I’ve built strong skills in Deep Learning and Computer Vision.
+					Hi! I’m Aishwarya, but I go by Ash. I’m based in Wisconsin, USA.
 					<br></br>
+					I hold a Master’s degree in Computer Science. Through my academic journey, I’ve built strong skills in Deep Learning and Computer Vision.
 					<br><br>
 					Before my Master’s, I worked for five years as a senior full-stack (MERN) engineer.
 					<br><br>
 					During this period, I worked on projects across healthcare, ed-tech, and fintech domains.
-				
 					<br><br>
 					Feel free to reach out to me for any technical opportunities or collaborations!
 					<br><br>
