--- a/index.html
+++ b/index.html
@@ -127,23 +127,23 @@
 				<span class="image main"><img src="images/award/france4.jpg" alt="award" /></span>
 				<span class="image main"><img src="images/award/france2.jpg" alt="award" /></span>
 				<h3>Represented Nepal on the Techstars Global Startup Weekend Paris <br> 2018</h3>
-				<p>Represented as a female developer from Nepal in a Global Startup Weekend Women.</p>
+				<p>Represented as a female software engineer from Nepal.</p>
 
 				<span class="image main"><img src="images/award/nan2.jpg" alt="award" /></span>
 				<h3>Winner of Startup Weekend Kathmandu <br>2018</h3>
-				<p>MVP for Nanny-for-nani, bridge application between parents and child care taker. </p>
+				<p>Build MVP for Nanny-for-nani. The business idea is build upon filling the gap between parents and child care takers. </p>
 
 				<span class="image main"><img src="images/award/aw1.jpg" alt="award" /></span>
-				<h3>Awarded with Best Idea Winner at Yomari code camp, LOCUS IOE,
-					<br>National Level Hackathon<br> 2017
+				<h3>Awarded with Best Idea Winner at Yomari code camp, LOCUS IOE <br>
+					<p>National Hackathon<p> 2017
 				</h3>
 
 				<span class="image main"><img src="images/award/aw2.jpg" alt="award" /></span>
-				<h3>Winner of Open data day hackathon <br>Under data analysis and visualization of public health,
+				<h3>Winner of Open data day hackathon <br> <p>Under data analysis and visualization of public health </p>
 					<br> 2017
 				</h3>
 				<br><br>
-				<h3>Participated in LINUX Kernel programming workshop<br> by Nicholas Mc Guire, <br>2017
+				<h3>Participated in LINUX Kernel programming workshop<br> <p>by Nicholas Mc Guire</p> <br>2017
 				</h3>
 			</article>
 			<!-- Contact -->
